--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3'
 
 services:
 
@@ -8,7 +8,7 @@ services:
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin123
-      - POSTGRES_DB=dev
+      - POSTGRES_DB=websays
     ports:
       - "5432:5432"
     volumes:
@@ -27,10 +27,13 @@ services:
      - 8080:8080
     networks:
       - dev-network
+    volumes:
+      -  ./data:/app/data
 
 
 volumes:
   postgres-db:
+  data:
 
 networks:
     dev-network:
